--- a/estilo.css
+++ b/estilo.css
@@ -1,27 +1,32 @@
-body {
-    background: rgb(51, 80, 154);
+body
+{
+    background: rgb(2, 23, 49);
     font: normal 15pt Arial;
 }
-header {
-text-align: center ;
-color: yellow
- 
+
+header
+{
+    color: rgb(222, 127, 127);
+    text-align: center;
 }
-section {
-    background: white;
-    border-radius: 15px;
+
+section
+{
+    background: rgb(233, 211, 211);
+    border-radius: 10px;
     padding: 15px;
     width: 500px;
     margin: auto;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
+    
 }
-
-div {
+div{
     text-align: center;
-    padding: 10px;
+    padding: 8px;
 }
-footer {
- color: red;
- text-align: center;
- font-style: italic;
+footer
+{
+    color: white; 
+    text-align: center; 
+    font-style: italic;
 }
